--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="fab_content_desc">fab content desc</string>
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
+    <string name="logout">Logout</string>
+    <string name="message">message</string>
 </resources>
