--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
     <string name="message">message</string>
+    <string name="messenge">Message</string>
+    <string name="from">from</string>
+    <string name="time">time</string>
 </resources>
