--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,16 @@
     <string name="fab_content_desc">fab content desc</string>
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
-    <string name="logout">Logout</string>
+    <string name="logout">Log out</string>
     <string name="message">message</string>
     <string name="messenge">Message</string>
     <string name="from">from</string>
     <string name="time">time</string>
+    <string name="imageDesc">Image description</string>
+    <string name="goBack">goBack</string>
+    <string name="logoutMessage">Are you sure you want to log out?</string>
+    <string name="notifications">Notifications</string>
+    <string name="signIn">Sign In</string>
+    <string name="search">search…</string>
+    <string name="newUser">New Users</string>
 </resources>
