--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="message">message</string>
     <string name="messenge">Message</string>
     <string name="from">from</string>
-    <string name="time">time</string>
+    <string name="time">00:00 am</string>
     <string name="imageDesc">Image description</string>
     <string name="goBack">goBack</string>
     <string name="logoutMessage">Are you sure you want to log out?</string>
@@ -22,4 +22,7 @@
     <string name="signIn">Sign In</string>
     <string name="search">search…</string>
     <string name="newUser">New Users</string>
+    <string name="confimPw">Confirm Password</string>
+    <string name="request">Request +</string>
+    <string name="pendient">Pendient -</string>
 </resources>
