--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,8 @@
     <string name="signIn">Sign In</string>
     <string name="search">search…</string>
     <string name="newUser">New Users</string>
-    <string name="confimPw">Confirm Password</string>
+    <string name="confirmPw">Confirm Password</string>
     <string name="request">Request +</string>
-    <string name="pendient">Pendient -</string>
+    <string name="pending">Pendient -</string>
+    <string name="friend">Friend</string>
 </resources>
