--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
     <string name="logout">Log out</string>
-    <string name="message">message</string>
+    <string name="message">Message</string>
     <string name="messenge">Message</string>
     <string name="from">from</string>
     <string name="time">00:00 am</string>
