change some values resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="request">Request +</string>
     <string name="pending">Pendient -</string>
     <string name="friend">Friend</string>
+    <string name="recent_search">Recent</string>
 </resources>
