--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,6 @@
     <string name="settings">Settings</string>
     <string name="logout">Log out</string>
     <string name="message">Message</string>
-    <string name="messenge">Message</string>
     <string name="from">from</string>
     <string name="time">00:00 am</string>
     <string name="imageDesc">Image description</string>
@@ -27,4 +26,6 @@
     <string name="pending">Pendient -</string>
     <string name="friend">Friend</string>
     <string name="recent_search">Recent</string>
+    <string name="add">Add</string>
+    <string name="smsNotification">#User wants to be friend</string>
 </resources>
