--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="email_error">Email Incorrect</string>
     <string name="password_error">Password Incorrect</string>
     <string name="login_error">Email or Password might be incorrect</string>
+    <string name="net_error">Something went wrong.</string>
 </resources>
