--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="status">Status</string>
     <string name="myProfile">My Profile</string>
     <string name="empty">Empty</string>
+    <string name="footer_text">Has fun Chatting!</string>
 </resources>
