changed main color

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="status">Status</string>
     <string name="myProfile">My Profile</string>
     <string name="empty">Empty</string>
-    <string name="footer_text">Has fun Chatting!</string>
+    <string name="footer_text">Have fun Chatting!</string>
     <string name="welcomeTitle">Welcome</string>
     <string name="welcomeContentText">Let\'s have fun chatting with friends or you can even find new people to talk!</string>
     <string name="or">OR</string>
